--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-select": "^2.3.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-promise": "^0.6.0"
   },
   "scripts": {
